styles: perfectionist plugin add

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
     "parser": "@typescript-eslint/parser",
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
     "plugins": ["react", "@typescript-eslint", "prettier"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
+        "prettier"
+    ],
     "rules": {
         "prettier/prettier": "error"
     },
@@ -10,17 +15,31 @@
             "version": "detect"
         }
     },
+    "ignorePatterns": ["build", "dist", "node_modules"],
     "overrides": [
         {
-            "files": ["products/**/*.ts?(x)"],
-            "extends": ["plugin:react/recommended"],
+            "files": ["**/*.ts?(x)", "**/*.js?(x)", "**/*.css", "**/*.html", "**/*.json"],
+            "plugins": ["perfectionist"],
+            "extends": ["plugin:perfectionist/recommended-natural"],
             "parserOptions": {
                 "ecmaFeatures": {
                     "jsx": true
                 }
             },
             "rules": {
-                "react/react-in-jsx-scope": "off"
+                // react import 생략 가능하도록
+                "react/react-in-jsx-scope": "off",
+                // perfectionist 와 충될되는 규칙
+                "import/order": "off",
+                "sort-imports": "off",
+                //
+                "perfectionist/sort-objects": [
+                    "error",
+                    {
+                        "type": "natural",
+                        "order": "asc"
+                    }
+                ]
             }
         }
     ]
