--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "utils": "yarn workspace @common/utils",
         "components": "yarn workspace @common/components",
         "packages-build": "yarn workspaces foreach -ptR --from '{@common/utils,@common/components}' run build",
-        "lint": "eslint * --fix"
+        "lint": "eslint . --fix --config ./.eslintrc.json"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -23,6 +23,7 @@
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-config-react-app": "^7.0.1",
+        "eslint-plugin-html": "^7.1.0",
         "eslint-plugin-perfectionist": "^1.4.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.2",
