--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     ],
     "scripts": {
         "cv": "yarn workspace cv",
+        "vsp": "yarn workspace vite-ssr-project",
         "ma": "yarn workspace my-app",
         "na": "yarn workspace next-app",
         "nap": "yarn workspace next-app-pages",
@@ -18,8 +19,8 @@
         "lint": "eslint . --fix --config ./.eslintrc.js"
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.56.0",
-        "@typescript-eslint/parser": "^5.56.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-config-react-app": "^7.0.1",
