--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "utils": "yarn workspace @common/utils",
         "components": "yarn workspace @common/components",
         "packages-build": "yarn workspaces foreach -ptR --from '{@common/utils,@common/components}' run build",
-        "lint": "eslint . --fix --config ./.eslintrc.js"
+        "lint": "eslint . --fix --config ./.eslintrc.js && yarn vsp lint"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.59.0",
