--- a/products/vite-ssr-project/package.json
+++ b/products/vite-ssr-project/package.json
@@ -6,7 +6,7 @@
         "build": "vite build",
         "server": "ts-node ./server/index.ts",
         "server:prod": "cross-env NODE_ENV=production ts-node ./server/index.ts",
-        "lint": "eslint . --max-warnings 0"
+        "lint": "eslint . --fix --max-warnings 0"
     },
     "dependencies": {
         "@types/compression": "^1.7.2",
