--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,14 +1,15 @@
 nodeLinker: pnp
 
 plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+    - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+      spec: '@yarnpkg/plugin-workspace-tools'
+    - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+      spec: '@yarnpkg/plugin-typescript'
+    - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+      spec: '@yarnpkg/plugin-interactive-tools'
 
 pnpIgnorePatterns:
-  - ./nm-packages/**
+    - ./nm-packages/**
+    - ./nm-projects/**
 
 yarnPath: .yarn/releases/yarn-3.6.0.cjs
