--- a/nm-projects/vite-ssr-project/package.json
+++ b/nm-projects/vite-ssr-project/package.json
@@ -1,11 +1,12 @@
 {
     "name": "vite-ssr-project",
+    "packageManager": "yarn@3.6.0",
     "scripts": {
         "dev": "npm run server",
         "prod": "npm run lint && npm run build && npm run server:prod",
         "build": "vite build",
-        "server": "ts-node ./server/index.ts",
-        "server:prod": "cross-env NODE_ENV=production ts-node ./server/index.ts",
+        "server": "ts-node --project ./tsconfig.json ./server/index.ts",
+        "server:prod": "cross-env NODE_ENV=production ts-node --project ./tsconfig.json ./server/index.ts",
         "lint": "eslint . --fix --max-warnings 0"
     },
     "dependencies": {
