--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.2",
         "prettier": "^2.8.6",
+        "react": "^18.2.0",
         "typescript": "^5.0.2"
+    },
+    "dependencies": {
+        "@types/react": "^18.0.8"
     }
 }
