--- a/nm-projects/vite-ssr-project/tsconfig.json
+++ b/nm-projects/vite-ssr-project/tsconfig.json
@@ -3,7 +3,7 @@
         "baseUrl": ".",
         "paths": { "react": ["./node_modules/react"], "react-dom": ["./node_modules/react-dom"] },
         "strict": true,
-        "module": "ES2020",
+        "module": "es2022",
         "target": "ES2020",
         "moduleResolution": "Node",
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
