fix: 공통 라이브러리 빌드 옵션 수정

--- a/packages/common-components/tsconfig.json
+++ b/packages/common-components/tsconfig.json
@@ -12,8 +12,16 @@
         "allowImportingTsExtensions": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
         "jsx": "react-jsx",
+
+        /* Bundler @types delaration */
+        // "noEmit": true,
+        "noEmit": false,
+        "emitDeclarationOnly": true,
+        "declaration": true,
+        "declarationMap": true,
+        "declarationDir": "./dist.types",
+        "outDir": "dist",
 
         /* Linting */
         "strict": true,
