--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -28,6 +28,7 @@
         "express": "^4.18.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.14.1",
         "serverless-http": "^3.2.0",
         "sirv": "^2.0.2",
         "typescript": "^4.9.4",
