feat: codeEditor 컴포넌트 추가

--- a/packages/common-utils/package.json
+++ b/packages/common-utils/package.json
@@ -15,7 +15,7 @@
             "require": "./dist/my-lib.umd.cjs"
         }
     },
-    "typings": "./dist.types/main",
+    "typings": "./dist.types/index",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
