--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,15 @@
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": false
     },
+    "references": [
+        {
+            "path": "packages/common-components"
+        },
+        {
+            "path": "packages/common-utils"
+        }
+    ],
     "exclude": ["node_modules", "**/node_modules"]
 }
