--- a/packages/common-components/package.json
+++ b/packages/common-components/package.json
@@ -15,7 +15,7 @@
             "require": "./dist/my-lib.umd.cjs"
         }
     },
-    "typings": "./dist.types/main",
+    "typings": "./dist.types/index",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
@@ -24,7 +24,8 @@
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-live": "^4.1.3"
     },
     "devDependencies": {
         "@types/node": "^20.3.2",
