--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@common/components": "workspace:^",
+        "@common/utils": "workspace:^",
         "@types/express": "^4.17.14",
         "@types/node": "^18.11.9",
         "@types/react": "^18.0.8",
@@ -26,8 +27,10 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
         "express": "^4.18.1",
+        "prettier": "2.8.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-live": "^4.1.3",
         "react-router-dom": "^6.14.1",
         "serverless-http": "^3.2.0",
         "sirv": "^2.0.2",
@@ -38,6 +41,7 @@
     },
     "type": "module",
     "devDependencies": {
+        "@types/prettier": "^2.7.3",
         "@types/serverless": "^3",
         "@types/ua-parser-js": "^0.7.36",
         "esbuild": "^0.18.10",
