--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@common/components": "workspace:^",
         "@common/utils": "workspace:^",
+        "@react-oauth/google": "latest",
         "@types/express": "^4.17.14",
         "@types/node": "^18.11.9",
         "@types/react": "^18.0.8",
@@ -21,6 +22,7 @@
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "@vitejs/plugin-react": "^3.0.0",
+        "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "eslint": "^8.38.0",
         "eslint-plugin-react": "^7.32.2",
@@ -41,6 +43,7 @@
     },
     "type": "module",
     "devDependencies": {
+        "@types/cors": "^2",
         "@types/prettier": "^2.7.3",
         "@types/serverless": "^3",
         "@types/ua-parser-js": "^0.7.36",
