--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -32,6 +32,7 @@
         "prettier": "2.8.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.10.1",
         "react-live": "^4.1.3",
         "react-router-dom": "^6.14.1",
         "serverless-http": "^3.2.0",
