--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -44,6 +44,7 @@
     },
     "type": "module",
     "devDependencies": {
+        "@types/babel__standalone": "^7",
         "@types/cors": "^2",
         "@types/prettier": "^2.7.3",
         "@types/serverless": "^3",
