fix: images resource -> public, cookie parser추가

--- a/projects/vite-ssr-project/serverless.yml
+++ b/projects/vite-ssr-project/serverless.yml
@@ -18,6 +18,8 @@ provider:
     memorySize: 512 # mb
     timeout: 5 # seconds
     versionFunctions: false
+    httpApi:
+        cors: true
 
 package:
     individually: true
