--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -22,6 +22,7 @@
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "@vitejs/plugin-react": "^3.0.0",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "eslint": "^8.38.0",
@@ -47,6 +48,7 @@
     "type": "module",
     "devDependencies": {
         "@types/babel__standalone": "^7",
+        "@types/cookie-parser": "^1",
         "@types/cors": "^2",
         "@types/prettier": "^2.7.3",
         "@types/serverless": "^3",
@@ -58,6 +60,8 @@
         "eslint-plugin-html": "^7.1.0",
         "eslint-plugin-perfectionist": "^1.4.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "sass": "^1.64.0",
+        "sass-loader": "^13.3.2",
         "serverless": "^3.33.0",
         "serverless-esbuild": "^1.45.1",
         "serverless-offline": "^12.0.4",
