styles: components 상대경로 변경

--- a/projects/vite-ssr-project/tsconfig.json
+++ b/projects/vite-ssr-project/tsconfig.json
@@ -3,7 +3,9 @@
         "baseUrl": ".",
         "paths": {
             "react": ["./node_modules/react"],
-            "react-dom": ["./node_modules/react-dom"]
+            "react-dom": ["./node_modules/react-dom"],
+            "~components/*": ["./components/*"],
+            "~hooks/*": ["./hooks/*"]
         },
         "strict": true,
         "module": "es2022",
