--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -22,9 +22,13 @@
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "@vitejs/plugin-react": "^3.0.0",
+        "aws-sdk": "^2.1420.0",
+        "axios": "^1.4.0",
+        "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
+        "dotenv": "^16.3.1",
         "eslint": "^8.38.0",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
@@ -48,6 +52,7 @@
     "type": "module",
     "devDependencies": {
         "@types/babel__standalone": "^7",
+        "@types/body-parser": "^1",
         "@types/cookie-parser": "^1",
         "@types/cors": "^2",
         "@types/prettier": "^2.7.3",
