fix: 로컬 경로 ~ -> #

--- a/projects/vite-ssr-project/tsconfig.json
+++ b/projects/vite-ssr-project/tsconfig.json
@@ -4,8 +4,9 @@
         "paths": {
             "react": ["./node_modules/react"],
             "react-dom": ["./node_modules/react-dom"],
-            "~components/*": ["./components/*"],
-            "~hooks/*": ["./hooks/*"]
+            "#components/*": ["./components/*"],
+            "#renderer/*": ["./renderer/*"],
+            "#hooks/*": ["./hooks/*"]
         },
         "strict": true,
         "module": "es2022",
