--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -15,13 +15,6 @@
         "@common/components": "workspace:^",
         "@common/utils": "workspace:^",
         "@react-oauth/google": "latest",
-        "@types/express": "^4.17.14",
-        "@types/node": "^18.11.9",
-        "@types/react": "^18.0.8",
-        "@types/react-dom": "^18.0.3",
-        "@typescript-eslint/eslint-plugin": "^5.59.0",
-        "@typescript-eslint/parser": "^5.59.0",
-        "@vitejs/plugin-react": "^3.0.0",
         "aws-sdk": "^2.1420.0",
         "axios": "^1.4.0",
         "body-parser": "^1.20.2",
@@ -29,10 +22,6 @@
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^16.3.1",
-        "eslint": "^8.38.0",
-        "eslint-plugin-react": "^7.32.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.3.4",
         "express": "^4.18.1",
         "normalize.css": "^8.0.1",
         "prettier": "2.8.6",
@@ -44,10 +33,7 @@
         "serverless-http": "^3.2.0",
         "shallowequal": "^1.1.0",
         "styled-components": "^6.0.4",
-        "typescript": "^4.9.4",
-        "ua-parser-js": "^1.0.35",
-        "vite": "^4.0.3",
-        "vite-plugin-ssr": "^0.4.132"
+        "ua-parser-js": "^1.0.35"
     },
     "type": "module",
     "devDependencies": {
@@ -55,21 +41,35 @@
         "@types/body-parser": "^1",
         "@types/cookie-parser": "^1",
         "@types/cors": "^2",
+        "@types/express": "^4.17.14",
+        "@types/node": "^18.11.9",
         "@types/prettier": "^2.7.3",
+        "@types/react": "^18.0.8",
+        "@types/react-dom": "^18.0.3",
         "@types/serverless": "^3",
         "@types/shallowequal": "^1",
         "@types/styled-components": "^5.1.26",
         "@types/ua-parser-js": "^0.7.36",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "@vitejs/plugin-react": "^3.0.0",
         "esbuild": "^0.18.10",
         "esbuild-plugin-copy": "^2.1.1",
+        "eslint": "^8.38.0",
         "eslint-plugin-html": "^7.1.0",
         "eslint-plugin-perfectionist": "^1.4.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4",
         "sass": "^1.64.0",
         "sass-loader": "^13.3.2",
         "serverless": "^3.33.0",
         "serverless-esbuild": "^1.45.1",
         "serverless-offline": "^12.0.4",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4",
+        "vite": "^4.0.3",
+        "vite-plugin-ssr": "^0.4.132"
     }
 }
