--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -15,13 +15,7 @@
         "@common/components": "workspace:^",
         "@common/utils": "workspace:^",
         "@react-oauth/google": "latest",
-        "aws-sdk": "^2.1420.0",
         "axios": "^1.4.0",
-        "body-parser": "^1.20.2",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.1",
         "normalize.css": "^8.0.1",
         "prettier": "2.8.6",
         "react": "^18.2.0",
@@ -29,10 +23,8 @@
         "react-icons": "^4.10.1",
         "react-live": "^4.1.3",
         "react-router-dom": "^6.14.1",
-        "serverless-http": "^3.2.0",
         "shallowequal": "^1.1.0",
-        "styled-components": "^6.0.4",
-        "ua-parser-js": "^1.0.35"
+        "styled-components": "^6.0.4"
     },
     "type": "module",
     "devDependencies": {
@@ -52,6 +44,11 @@
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "@vitejs/plugin-react": "^3.0.0",
+        "aws-sdk": "^2.1420.0",
+        "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "esbuild": "^0.18.10",
         "esbuild-plugin-copy": "^2.1.1",
         "eslint": "^8.38.0",
@@ -61,13 +58,16 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
+        "express": "^4.18.1",
         "sass": "^1.64.0",
         "sass-loader": "^13.3.2",
         "serverless": "^3.33.0",
         "serverless-esbuild": "^1.45.1",
+        "serverless-http": "^3.2.0",
         "serverless-offline": "^12.0.4",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4",
+        "ua-parser-js": "^1.0.35",
         "vite": "^4.0.3",
         "vite-plugin-ssr": "^0.4.132",
         "vite-plugin-windicss": "^1.9.0"
