--- a/projects/vite-ssr-project/serverless.yml
+++ b/projects/vite-ssr-project/serverless.yml
@@ -25,7 +25,7 @@ package:
     individually: true
 
 functions:
-    vite-ssr:
+    vsp:
         handler: server/lambda.handler
         environment:
             NODE_ENV: production
