--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -12,6 +12,8 @@
         "lint": "eslint . --fix --max-warnings 0"
     },
     "dependencies": {
+        "@aws-sdk/client-cloudfront": "^3.370.0",
+        "@aws-sdk/client-s3": "^3.374.0",
         "@common/components": "workspace:^",
         "@common/utils": "workspace:^",
         "@react-oauth/google": "latest",
@@ -22,7 +24,6 @@
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "@vitejs/plugin-react": "^3.0.0",
-        "aws-sdk": "^2.1420.0",
         "axios": "^1.4.0",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
