--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -7,7 +7,7 @@
         "build": "vite build",
         "server": "ts-node --project ./tsconfig.json ./server/index.ts",
         "server:prod": "NODE_ENV=production ts-node --project ./tsconfig.json ./server/index.ts",
-        "prod:lambda": "vite build && serverless offline",
+        "prod:lambda": "NODE_ENV=production vite build && serverless offline",
         "deploy": "serverless deploy --verbose",
         "lint": "eslint . --fix --max-warnings 0"
     },
