--- a/packages/common-utils/tsconfig.json
+++ b/packages/common-utils/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "rootDir": "lib",
         "composite": true,
 
         "target": "ES2020",
@@ -33,5 +34,6 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": ["lib"],
+    "exclude": ["dist", "dist.types"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
