feat: 공통 유틸 훅, 타입 추가

--- a/packages/common-utils/tsconfig.json
+++ b/packages/common-utils/tsconfig.json
@@ -15,11 +15,11 @@
         "allowImportingTsExtensions": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "react-jsx",
+        "jsx": "react",
 
         /* Bundler @types delaration */
         // "noEmit": true,
-        "typeRoots": ["./dist.types", "./node_modules/dist.types"],
+        // "typeRoots": ["./dist.types", "./node_modules/dist.types"],
         "noEmit": false,
         "emitDeclarationOnly": true,
         "declaration": true,
