--- a/packages/common-utils/package.json
+++ b/packages/common-utils/package.json
@@ -23,10 +23,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4",
         "@types/node": "^20.3.2",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
