--- a/projects/chatbot/package.json
+++ b/projects/chatbot/package.json
@@ -5,15 +5,23 @@
     "version": "1.0.0",
     "author": "lainer <zlepgk123@gmail.com>",
     "license": "MIT",
+    "type": "module",
+    "main": "server.js",
     "scripts": {
-        "server": "node express-app/server.js",
-        "app": "FLASK_ENV=development python3 flask-app/app.py",
+        "server": "node server.js",
         "deploy": "sls deploy",
         "offline": "sls offline"
     },
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "node-fetch": "^3.3.2",
+        "serverless-http": "^3.2.0"
+    },
     "devDependencies": {
-        "serverless-offline": "^13.0.0",
-        "serverless-python-requirements": "^6.0.0",
-        "serverless-wsgi": "^3.0.2"
+        "@types/body-parser": "^1",
+        "@types/express": "^4",
+        "serverless-offline": "^13.0.0"
     }
 }
