chore: 불필요한 파일 배포 제거

--- a/nm-projects/chatbot/serverless.yml
+++ b/nm-projects/chatbot/serverless.yml
@@ -45,3 +45,5 @@ package:
         - README.md
         - package.json
         - sentence_transformer_layer
+        - serverless-flask.yml
+        - _serverless.yml
