fix: 보안코드 추가

--- a/nm-projects/chatbot/serverless.yml
+++ b/nm-projects/chatbot/serverless.yml
@@ -11,6 +11,7 @@ functions:
         handler: express-app/server.handler
         environment:
             OPENAI_API_KEY: ${env:OPENAI_API_KEY}
+            ALLOWED_HOST: chatbot.readyfront.co.kr
         events:
             - http:
                   path: /
@@ -33,20 +34,20 @@ custom:
     wsgi:
         app: flask-app/app.app # 앱 위치 및 Flask 앱 변수 이름
         packRequirements: false
+    cloudfrontInvalidate:
+        distributionIdKey: ${env:CLOUDFRONT_DISTRIBUTION_ID}  # CloudFormation에서 CloudFront 배포 ID의 키 이름
+        items: ["/*"]  # 모든 캐시 항목을 무효화
 
 package:
     include:
         - express-app/**
         - express-app/node_modules/**
-        - flask-app/** # 현재 sentence-transformers 패키지가 단독으로 700mb가 넘어가 제외하고 배포
+        - flask-app/** 
     exclude:
-        # - flask-app/**
-        # - node_modules/**
         - .envrc
         - README.md
         - package.json
         - sentence_transformer_layer
         - serverless-flask.yml
         - _serverless.yml
-    # excludeDevDependencies: false # 상위 package.json에 dependencies가 없어서 하위의 종속석도 같이 포함되지 않는 이슈
     
