feat: 이미지 마스킹 영역 클릭 이벤트 테스트

--- a/projects/interactive-study/package.json
+++ b/projects/interactive-study/package.json
@@ -3,7 +3,8 @@
         "sh-start": "lite-server --baseDir='sheepHills'",
         "mr-start": "lite-server --baseDir='mouseRect'",
         "sr-start": "lite-server --baseDir='shapeRotate'",
-        "bb-start": "lite-server --baseDir='bouncyBall'"
+        "bb-start": "lite-server --baseDir='bouncyBall'",
+        "mc-start": "lite-server --baseDir='maskClick'"
     },
     "devDependencies": {
         "lite-server": "^2.6.1"
