feat: 이력서 1차 작업

--- a/projects/vite-ssr-project/tsconfig.json
+++ b/projects/vite-ssr-project/tsconfig.json
@@ -6,7 +6,9 @@
             "react-dom": ["./node_modules/react-dom"],
             "#components/*": ["./components/*"],
             "#renderer/*": ["./renderer/*"],
-            "#hooks/*": ["./hooks/*"]
+            "#hooks/*": ["./hooks/*"],
+            "@common/components": ["../../packages/common-components/lib/index.ts"],
+            "@common/utils": ["../../packages/common-utils/lib/index.ts"]
         },
         "strict": true,
         "module": "es2022",
