--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "lint": "eslint . --fix --config ./.eslintrc.js && yarn vsp lint"
     },
     "devDependencies": {
+        "@types/node": "^20.8.3",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "eslint": "^8.38.0",
