--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
+        "types": ["node"],
         "forceConsistentCasingInFileNames": false
     },
     "references": [
