--- a/projects/CV/package.json
+++ b/projects/CV/package.json
@@ -32,6 +32,7 @@
         "eslint": "^8.38.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
+        "puppeteer": "^21.3.8",
         "sass": "^1.69.0",
         "typescript": "^5.0.2",
         "vite": "^4.3.9"
