--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -33,7 +33,10 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
         "express": "^4.18.1",
+        "express-session": "^1.17.3",
         "normalize.css": "^8.0.1",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
         "prettier": "2.8.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -53,6 +56,9 @@
         "@types/body-parser": "^1",
         "@types/cookie-parser": "^1",
         "@types/cors": "^2",
+        "@types/express-session": "^1",
+        "@types/passport": "^0",
+        "@types/passport-google-oauth20": "^2",
         "@types/prettier": "^2.7.3",
         "@types/serverless": "^3",
         "@types/shallowequal": "^1",
