refactor: esm 혼용 설정 추가

--- a/projects/vite-ssr-project/tsconfig.json
+++ b/projects/vite-ssr-project/tsconfig.json
@@ -24,7 +24,8 @@
         "transpileOnly": true,
         "esm": true,
         "compilerOptions": {
-            "moduleResolution": "Node16"
-        }
+            "moduleResolution": "Node"
+        },
+        "experimentalSpecifierResolution": "node"
     }
 }
