--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -33,6 +33,7 @@
         "eslint-plugin-react-refresh": "^0.3.4",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^9.0.2",
         "normalize.css": "^8.0.1",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
@@ -56,6 +57,7 @@
         "@types/cookie-parser": "^1",
         "@types/cors": "^2",
         "@types/express-session": "^1",
+        "@types/jsonwebtoken": "^9",
         "@types/passport": "^0",
         "@types/passport-google-oauth20": "^2",
         "@types/prettier": "^2.7.3",
