--- a/packages/common-utils/package.json
+++ b/packages/common-utils/package.json
@@ -27,7 +27,8 @@
         "jspdf": "^2.5.1",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "recoil": "^0.7.7"
     },
     "devDependencies": {
         "@types/lodash": "^4",
