feat: home에 supplier 적용

--- a/projects/vite-ssr-project/tsconfig.json
+++ b/projects/vite-ssr-project/tsconfig.json
@@ -7,6 +7,7 @@
             "#components/*": ["./components/*"],
             "#renderer/*": ["./renderer/*"],
             "#hooks/*": ["./hooks/*"],
+            "#atoms/*": ["./atoms/*"],
             "@common/components": ["../../packages/common-components/lib/index.ts"],
             "@common/utils": ["../../packages/common-utils/lib/index.ts"]
         },
