--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -43,6 +43,7 @@
         "react-icons": "^4.10.1",
         "react-live": "^4.1.3",
         "react-router-dom": "^6.14.1",
+        "recoil": "^0.7.7",
         "shallowequal": "^1.1.0",
         "styled-components": "^6.0.4",
         "typescript": "^4.9.4",
