--- a/nm-projects/chatbot/serverless.yml
+++ b/nm-projects/chatbot/serverless.yml
@@ -5,6 +5,8 @@ provider:
     runtime: nodejs18.x
     stage: dev
     region: ap-northeast-2
+    memorySize: 1536 # mb
+    timeout: 15 # seconds
 
 functions:
     expressApp:
@@ -21,19 +23,19 @@ functions:
                   method: any
 plugins:
     - serverless-offline
-    - serverless-wsgi
-    - serverless-python-requirements
+    # - serverless-wsgi
+    # - serverless-python-requirements
     # - serverless-plugin-include-dependencies
 custom:
     serverless-offline:
         noPrependStageInUrl: true
         printOutput: true
         prefix: ''
-    pythonRequirements:
-        dockerizePip: non-linux # 비 리눅스 환경에서도 도커를 사용하여 패키징
-    wsgi:
-        app: flask-app/app.app # 앱 위치 및 Flask 앱 변수 이름
-        packRequirements: false
+    # pythonRequirements:
+    #     dockerizePip: non-linux # 비 리눅스 환경에서도 도커를 사용하여 패키징
+    # wsgi:
+    #     app: flask-app/app.app # 앱 위치 및 Flask 앱 변수 이름
+    #     packRequirements: false
     cloudfrontInvalidate:
         distributionIdKey: ${env:CLOUDFRONT_DISTRIBUTION_ID} # CloudFormation에서 CloudFront 배포 ID의 키 이름
         items: ['/*'] # 모든 캐시 항목을 무효화
@@ -42,7 +44,7 @@ package:
     include:
         - express-app/**
         - express-app/node_modules/**
-        - flask-app/**
+        # - flask-app/**
     exclude:
         - .envrc
         - README.md
