--- a/projects/CV/package.json
+++ b/projects/CV/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "deploy": "yarn build && aws s3 sync ./dist s3://cv.readyfront.co.kr --profile=readyfront-deploy --exclude 'node_modules/*'"
     },
     "dependencies": {
         "@common/components": "workspace:^",
@@ -32,7 +33,6 @@
         "eslint": "^8.38.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
-        "puppeteer": "^21.3.8",
         "sass": "^1.69.0",
         "typescript": "^5.0.2",
         "vite": "^4.3.9"
