--- a/projects/vite-ssr-project/package.json
+++ b/projects/vite-ssr-project/package.json
@@ -42,8 +42,11 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.10.1",
         "react-live": "^4.1.3",
+        "react-markdown": "^9.0.0",
         "react-router-dom": "^6.14.1",
         "recoil": "^0.7.7",
+        "rehype-raw": "^7.0.0",
+        "remark-gfm": "^4.0.0",
         "shallowequal": "^1.1.0",
         "styled-components": "^6.0.4",
         "typescript": "^4.9.4",
