feat: gpt3.5 -> gpt4.5 upgrade

--- a/nm-projects/chatbot/express-app/package.json
+++ b/nm-projects/chatbot/express-app/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "main": "server.js",
     "scripts": {
-        "server": "node server.js"
+        "server": "node server.js",
+        "deploy": "sls deploy"
     },
     "dependencies": {
         "body-parser": "^1.20.2",
