--- a/nm-projects/chatbot/.envrc
+++ b/nm-projects/chatbot/.envrc
@@ -3,3 +3,6 @@ export AWS_DEFAULT_REGION=ap-northeast-2
 while IFS='=' read -r key value; do
     export "$key=$value"
 done <.env
+
+source $(brew --prefix nvm)/nvm.sh
+nvm use
