--- a/projects/chatbot/package.json
+++ b/projects/chatbot/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@hyrious/esbuild-plugin-commonjs": "^0.2.2",
+        "esbuild": "^0.19.5",
         "esbuild-plugin-copy": "^2.1.1",
         "serverless-esbuild": "^1.48.5",
         "serverless-offline": "^13.0.0",
