--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,9 @@
     "editor.formatOnSave": true,
     //  eslint linting autofix
     "editor.codeActionsOnSave": {
-        "editor.action.fixAll": true,
-        "source.fixAll": true,
-        "source.fixAll.eslint": true
+        "editor.action.fixAll": "explicit",
+        "source.fixAll": "explicit",
+        "source.fixAll.eslint": "explicit"
     },
     // 불필요한 탐색 제거
     "search.exclude": {
